# SkillUp

./: .gitignore  README.md
skillup_project/: .gitignore  main.py  pyproject.toml
skillup_project/interface/: main.py  menu_candidato.py
skillup_project/skillup_project/: pyproject.toml
skillup_project/skillup_project/interface/: menu_candidato.py
skillup_project/skillup_project/src/dominio/: empresa.py  entidade_publicadora.py
skillup_project/skillup_project/src/skillup_project/: empresa.py  instituicao_ensino.py
skillup_project/src/aplicacao/: __init__.py  fluxo_candidato.py  fluxo_candidato_admin.py  fluxo_empresa.py  fluxo_empresa_admin.py  fluxo_instituicao.py  fluxo_instituicao_ensino_admin.py
skillup_project/src/data/: area_ensino.json  candidato.json  competencia.json
skillup_project/src/dominio/: candidato.py  candidatura.py  competencia.py  competencia_candidato.py  curso_abs.py  curso_competencia.py  curso_ead.py  curso_presencial.py  empresa.py  entidade_publicadora.py  inscricao_curso.py  instituicao_ensino.py  main.py  requisitos_vaga.py  vaga.py  validators.py
skillup_project/src/interfaces/: interface_area_ensino.py  interface_candidato.py  interface_candidatura.py  interface_competencia.py  interface_competencia_candidato.py  interface_curso_competencia.py  interface_empresa.py  interface_inscricao_curso.py  interface_instituicao_area_ensino.py  interface_instituicao_ensino.py  interface_requisito_vaga.py  interface_vaga.py
skillup_project/src/repositorios/: loader.py  (+16 more)
skillup_project/tests/: conftest.py  test_suite.py
(+63 files in other folders)
