[project]
name = "skillup-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Junio Silva",email = "juniosilva.mr11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "skillup_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
